--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,4 +8,7 @@ jobs:
   run-unit-tests:
     runs-on: ubuntu-22.04
     steps:
-      - run: emacs --version
+      - run: |
+          sudo apt update -y
+          sudo apt install emacs
+          emacs -batch -l ert -l tests.el -f ert-run-tests-batch-and-exit
