--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,4 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - run: |
-          sudo apt update -y
-          sudo apt install emacs
-          emacs -batch -l ert -l tests.el -f ert-run-tests-batch-and-exit
+      - uses: emilyseville7cfg-better-emacs/unit-test-runner@v1.7
