--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,5 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: emilyseville7cfg-better-emacs/unit-test-runner@v1.0
+      - name: run unit tests
+        uses: emilyseville7cfg-better-emacs/unit-test-runner@v1.0
